--- a/.github/workflows/deployeks.yml
+++ b/.github/workflows/deployeks.yml
@@ -6,8 +6,9 @@ on:
       - main
 
 jobs:
-  deploy:
+  build-and-test:
     runs-on: ubuntu-latest
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
