--- a/.github/workflows/deployeks.yml
+++ b/.github/workflows/deployeks.yml
@@ -24,7 +24,7 @@ jobs:
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.HUB_USERNAME }}
-        password: ${{ secrets.HUB_ACCESS_TOKEN }
+        password: ${{ secrets.HUB_ACCESS_TOKEN }}
    
     - name: Build and push Docker image
       run: |
