--- a/.github/workflows/deployeks.yml
+++ b/.github/workflows/deployeks.yml
@@ -12,6 +12,17 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+      
+    - name: Python version
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9' 
+        
+    - name: Add flask
+      run: python -m pip install flask
+      
+    - name: Add pytest
+      run: pip install pytest
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
