--- a/deploy.yml
+++ b/deploy.yml
@@ -17,6 +17,11 @@ spec:
         image: python
         ports:
         - containerPort: 5000
+        resources:
+      requests:
+        cpu: "250m"
+      limits:
+        cpu: "500m"
 ---
 apiVersion: v1
 kind: Service
