--- a/deploy.yml
+++ b/deploy.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: api-rest-container
-        image: python
+        image: killgoliat/api-rest
         ports:
         - containerPort: 5000
         resources:
