--- a/.github/workflows/deployeks.yml
+++ b/.github/workflows/deployeks.yml
@@ -49,12 +49,9 @@ jobs:
         docker push ${{ secrets.HUB_USERNAME }}/api-rest:latest
  
     - name: Deploy to EKS
+      run: |
+        echo ${{ secrets.KUBECONFIG_FILE }} | base64 --decode > kubeconfig.yaml
         kubectl apply -f deploy.yml
-    #  env:
-    #    KUBECONFIG: ${{ secrets.KUBECONFIG }}
-    #    IMAGE_TAG: ${{ env.IMAGE_TAG }}
-    #  run: |
-    #    kubectl apply -f deploy.yaml
-    #    kubectl set image deployment/api-rest-deployment api-rest-container=$ECR_REGISTRY/api-rest:$IMAGE_TAG
+        
 
 
