--- a/.github/workflows/deployeks.yml
+++ b/.github/workflows/deployeks.yml
@@ -51,10 +51,11 @@ jobs:
     - name: Deploy to EKS
       env:
         AWS_KUBECONFIG: ${{ secrets.AWS_KUBECONFIG }}
-      run: |
-        echo "$AWS_KUBECONFIG" > kubeconfig.yaml
-        export KCONFIG=kubeconfig.yaml
-        envsubst < deploy.yml | kubectl apply -f -
+      run: envsubst < deploy.yml | kubectl apply -f -
+      #run: |
+      #  echo "$AWS_KUBECONFIG" > kubeconfig.yaml
+      #  export KCONFIG=kubeconfig.yaml
+      #  envsubst < deploy.yml | kubectl apply -f -
       
         
 
