--- a/.github/workflows/deployeks.yml
+++ b/.github/workflows/deployeks.yml
@@ -51,8 +51,9 @@ jobs:
     - name: Deploy to EKS
       env:
         AWS_KUBECONFIG: ${{ secrets.AWS_KUBECONFIG }}
-      run: aws eks update-kubeconfig --name api-rest-deployment
-      run: envsubst < deploy.yml | kubectl apply -f -
+      run: | 
+        aws eks update-kubeconfig --name api-rest-deployment
+        envsubst < deploy.yml | kubectl apply -f -
       #run: |
       #  echo "$AWS_KUBECONFIG" > kubeconfig.yaml
       #  export KCONFIG=kubeconfig.yaml
