--- a/.github/workflows/deployeks.yml
+++ b/.github/workflows/deployeks.yml
@@ -53,7 +53,7 @@ jobs:
         AWS_KUBECONFIG: ${{ secrets.AWS_KUBECONFIG }}
       run: | 
         aws eks update-kubeconfig --name api-rest-deployment
-        envsubst < deploy.yml | kubectl apply -f -
+        kubectl apply -f deploy.yml
       #run: |
       #  echo "$AWS_KUBECONFIG" > kubeconfig.yaml
       #  export KCONFIG=kubeconfig.yaml
