--- a/.github/workflows/deployeks.yml
+++ b/.github/workflows/deployeks.yml
@@ -53,6 +53,7 @@ jobs:
         AWS_KUBECONFIG: ${{ secrets.AWS_KUBECONFIG }}
       run: | 
         aws eks update-kubeconfig --name api-rest-deployment
+        cat /home/runner/.kube/config
       # kubectl apply -f deploy.yml
       #run: |
       #  echo "$AWS_KUBECONFIG" > kubeconfig.yaml
