--- a/.github/workflows/deployeks.yml
+++ b/.github/workflows/deployeks.yml
@@ -52,8 +52,7 @@ jobs:
       env:
         AWS_KUBECONFIG: ${{ secrets.AWS_KUBECONFIG }}
       run: |
-        echo "$AWS_KUBECONFIG" > kubeconfig.yaml
-        export KCONFIG=kubeconfig.yaml
+        aws eks update-kubeconfig --name api-rest-deployment
         envsubst < deploy.yml | kubectl apply -f -
       #run: | 
       #  aws eks update-kubeconfig --name api-rest-deployment
