--- a/deploy.yml
+++ b/deploy.yml
@@ -1,16 +1,18 @@
-apiVersion: apps/v2
 kind: Deployment
+apiVersion: apps/v1
 metadata:
   name: api-rest-deployment
 spec:
   selector:
     matchLabels:
       app: api-rest
+      version: v01
   replicas: 2
   template:
     metadata:
       labels:
         app: api-rest
+        version: v01
     spec:
       containers:
       - name: api-rest-container
@@ -18,13 +20,13 @@ spec:
         ports:
         - containerPort: 5000
         resources:
-      requests:
-        cpu: "250m"
-      limits:
-        cpu: "500m"
+          requests:
+            cpu: "250m"
+          limits:
+            cpu: "500m"
 ---
-apiVersion: v2
 kind: Service
+apiVersion: v1
 metadata:
   name: api-rest-service
 spec:
