--- a/.github/workflows/deployeks.yml
+++ b/.github/workflows/deployeks.yml
@@ -53,7 +53,7 @@ jobs:
  
     - name: Deploy to EKS
       run: |
-        aws eks update-kubeconfig --name api-rest-deploymentv2
+        aws eks update-kubeconfig --name api-rest-deploynmentv2
         envsubst < deploy.yml | kubectl apply -f -
 
 
